<resources>
    <string name="app_name">SMART TO-LET</string>
    <string name="article">Bangladesh no.1 To-Let dealing apps create account and to-let your property very easy !!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SMART TO-LET</string>
    <string name="nav_header_subtitle">Online To-let News Apps</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text">Not account yet? Create one</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">LOGIN</string>
    <string name="post">POST</string>
    <string name="dummy_content">SMART TO-LET</string>
    <string name="location">Location</string>
    <string name="others">Others</string>
    <string name="to_let_type">To-Let Type :</string>
    <string name="rent">Rent :</string>
    <string name="room_for">Room For :</string>
    <string name="month">Month :</string>
    <string name="details">Details</string>

    <string-array name="roomForArray">
        <item>Room For</item>
        <item>Male</item>
        <item>Female</item>
        <item>Family</item>
    </string-array>

    <string-array name="propertyType">
        <item>Tolet Type</item>
        <item>Hostel</item>
        <item>Mess</item>
        <item>Flat</item>
        <item>Sublet</item>
        <item>Workplace</item>
        <item>Garage</item>
    </string-array>

    <string-array name="subArea">
        <item>Subarea</item>
        <item>Dhanmondi</item>
        <item>Mirpur</item>
        <item>Framgate</item>
        <item>Uttara</item>
        <item>Mohammadpur</item>
        <item>Gulshan</item>
        <item>Badda</item>
        <item>Mirpur</item>
        <item>Banani</item>
        <item>Banglamotor</item>
        <item>Motijheel</item>
        <item>Poltan</item>
        <item>Baridhara</item>
        <item>Moghbazar</item>
        <item>Demra</item>
        <item>Dhamrai</item>
        <item>Elephant Road</item>
        <item>Jatrabari</item>
        <item>Kafrul</item>
        <item>Khelkhet</item>
        <item>Sutrapur</item>
        <item>Savar</item>
        <item>Tongi</item>
        <item>Rampura</item>
        <item>Tejgaon</item>
        <item>Mohakhali</item>
        <item>Romna</item>
        <item>Khilgaon</item>
        <item>Moghbazar</item>
        <item>Newmarket</item>
    </string-array>

    <string-array name="months">
        <item>Tolet Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
